# trait-vec

./: .gitignore  Cargo.toml
benches/: benchmark.rs  static_arrays.rs
src/: dyn_view_ptr.rs  lib.rs  trait_vec.rs
